Tue Oct  4 14:08:24 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* docs/schema/Basic_Deployment_Data.xsd
	* docs/schema/unused_elements.xsd
	* tools/Config_Handlers/Basic_Deployment_Data.cpp
	* tools/Config_Handlers/Basic_Deployment_Data.hpp

	Updated to include domain information (ie, bridge, interconnect).
	
	* tools/Config_Handlers/RT-CCM/SRD_Handler.h

	Cosmetic changes. 
	
Mon Oct  3 14:27:39 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* CIAO-INSTALL.html

	Updated install documentation to reflect the restructuring.

Mon Oct  3 12:48:26 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp

	Commented out some debugging information. 
	
Mon Oct  3 15:44:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/Purify.html:
        
          Updated doc file with installation info and more info about
          Purifying a spawned child process.

Mon Oct  3 10:14:19 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp

	Corrected a bug in parameter checking. 
	
	* DAnCE/NodeManager/Node_Manager.cpp

	Added documentation for the -d command line options. 
	
	* tools/Config_Handlers/RT-CCM/CIAOServerResources.cpp
	* tools/Config_Handlers/RT-CCM/CIAOServerResources.hpp
	* tools/Config_Handlers/RT-CCM/SRD_Handler.cpp
	* tools/Config_Handlers/RT-CCM/SRD_Handler.h

	New functionality in the Config_Handlers. 
	
Mon Oct  3 10:00:08 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* bin/valgrind_nodedaemon.py

	Script to help launch nodemanager/nodeapplication under Valgrind. 
	
Mon Oct  3 000:31:09 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/Purify.html:
        
          New file, documenting the use of Purify with CIAO and DAnCE.

Sun Oct  2 22:24:15 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
