@@ -1,3 +1,12 @@
+Wed Oct  5 14:44:31 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DAnCE/DomainApplicationManager/Deployment_Configuration.cpp:
+        *
+          DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
+
+          Added some debug statements and some optimization choices.
+
 Tue Oct  4 14:08:24 2005  William Otte  <wotte@dre.vanderbilt.edu>
 
 	* docs/schema/Basic_Deployment_Data.xsd
